# TypstSlideViewer

./: .gitignore  README.md  pyproject.toml
examples/: .gitignore  html-embed.typ  slide.typ
src/typstslideviewer/: __init__.py  fzstd.js  html-embed.typ  tarts.min.js  template.j2.html
