[project]
name = "typstslideviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "szsdk", email = "shenz34206@hotmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fire>=0.7.0",
    "jinja2>=3.1.0",
    "loguru>=0.7.0",
    "pillow>=11.1.0",
    "pydantic>=2.10.0",
    "zstandard>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
gen-slide = "typstslideviewer:cli"
